# functionTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xwr/functiontest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xwr/functiontest/: BaseActivity.java  CameraActivity.java  MainActivity.java  MulkeyActivity.java  ReaderUtil.java  UIccActivity.java  UIdActivity.java  UpdateActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_mulkey.xml  activity_uicc.xml  activity_uid.xml  activity_update.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xwr/functiontest/: ExampleUnitTest.java
mulkeyboard/: CMakeLists.txt  build.gradle
mulkeyboard/src/main/: AndroidManifest.xml
mulkeyboard/src/main/cpp/: F4_MDS.cpp  F4_MDS.h  ukey.cpp  usbrw.cpp  usbrw.h
mulkeyboard/src/main/java/com/xwr/mulkeyboard/: HexUtil.java  KeyboardServer.java  UKeyApi.java  UKeyUtil.java
mulkeyboard/src/main/java/com/xwr/mulkeyboard/idCard/: IDCard.java  IDCardByte.java
mulkeyboard/src/main/java/com/xwr/mulkeyboard/usbapi/: UDevice.java  USBDevice.java  UsbApi.java
mulkeyboard/src/main/java/com/xwr/mulkeyboard/utils/: UsbUtil.java
